# OpenWnnK

./: README.md  import-summary.txt  local.properties
app/: build.gradle
app/src/main/cpp/libwnnDictionary/: CMakeLists.txt
app/src/main/cpp/libwnnEngDic/: CMakeLists.txt
app/src/main/cpp/libwnnJpnDic/: CMakeLists.txt
app/src/main/java/jp/co/omronsoft/openwnn/: Keyboard.java  KeyboardView.java  StyleableLoader.java
gradle/wrapper/: gradle-wrapper.properties
